2014-08-31  Per Bothner  <per@bothner.com>

	* Makefile.am: Merge in gnu/Makefile.am.

2014-08-28  Per Bothner  <per@bothner.com>

	* StackTarget.java (compileFromStack0): Use Type#isCompatibleWithValue
	with new return code to check if conversion is needed.
	* ConsumerTarget.java (type): New field.
	(<init>): Update accordingly.
	(getSingleTarget): New method.
	(makeContextTarget): Take result type.
	(compileUsingConsumer): Use more precise typing.
	(compileFromStack): First convert to target type.
	(compileWrite): Convert as needed.
	* InlineCalls.java (checkType): On type error involving PrimTypes,
	coerced to boxing of required type, not expression type. The former
	seems to do a better job of throwing a desired ClassCastException.
	* Compilation.java (compileConstant): Fix target type for
	compiling Values to ConsumerTarget.
	(compileConstant): Allow pushing char as int to consumer.
	* LambdaExp.java (compileBody): If compiling to a Consumer,
	make sure we still convert/cast to return type.

2014-08-21  Per Bothner  <per@bothner.com>

	* Compilation.java (getSymbolValueMethod, getSymbolProcedureMethod,
	getProcedureBindingMethod, setNameMethod, getLocation1EnvironmentMethod,
	getLocation2EnvironmentMethod): Remove unused fields.
	(getLocationMethod): Moved to ...
	* Declaration.java: ... here.

2014-08-13  Andrea Bernardini <andrebask@gmail.com>

	Optimized implementation of "case" expressions, with a new class
	extending Expression, compiled using the existing SwitchState
	interface.
	* CaseExp.java: New file. New class representing "case" expressions,
	cases are now compiled using the tableswitch/lookupswitch
	jvm instructions.
	* ChainLambdas.java: Add visitCaseExp method, for unreachable
	code detection in "case" expressions.
	* ExpVisitor.java: Add visitCaseExp method.
	* FindCapturedVars.java: Add visitCaseExp method, to bind
	ReferenceExps in "case" expressions.
	* FindTailCalls.java: Add visitCaseExp method, to check for