@@ -1,3 +1,10 @@
+2014-09-10  Per Bothner  <per@bothner.com>
+
+	* ThreadLocation.java: Split into two classes: for "anonymous"
+	thread-locals use ThreadLocarion.  Otherwise use new class:
+	* DynamicLocation.java: New class for dynamic named variables.
+	* SimpleEnvironment.java: Update accordingly.
+
 2014-08-31  Per Bothner  <per@bothner.com>
 
 	* Makefile.am: Merge in gnu/Makefile.am.
