@@ -1,3 +1,10 @@
+2014-09-10  Per Bothner  <per@bothner.com>
+
+	* BindingInitializer.java: Update for new DynamicLocation class.
+	* Language.java (declFromField): Likewise.
+	* BuiltinEnvironment.java (lookup): Simplify - check for
+	ANONYMOUS property doesn't appear to be used.
+
 2014-08-31  Per Bothner  <per@bothner.com>
 
 	* Makefile.am: Merge in gnu/Makefile.am.
